[gd_scene load_steps=29 format=3 uid="uid://dea28c55q05wy"]

[ext_resource type="Script" uid="uid://ultugv8rec7h" path="res://Scripts/pause_menu.gd" id="1_vmyb1"]
[ext_resource type="FontFile" uid="uid://bh7uomeu1tf74" path="res://Assets/Fonts/dungeon-mode.ttf" id="2_1och7"]
[ext_resource type="FontFile" uid="uid://61ovup0rfkps" path="res://Assets/Fonts/Black Demon.otf" id="2_stj27"]
[ext_resource type="AudioStream" uid="uid://dmibpyhfvr5oa" path="res://Music & SFX/SFX/select.mp3" id="3_bpi0q"]
[ext_resource type="Texture2D" uid="uid://cfs7vava5kr7k" path="res://Assets/INV BOARDERS.png" id="3_u8tnp"]
[ext_resource type="AudioStream" uid="uid://bd3vaoqo1psh7" path="res://Music & SFX/SFX/click_pm.wav" id="3_uscpe"]
[ext_resource type="PackedScene" uid="uid://cagewhegwfkb4" path="res://Inventory/Inventory GUI/inventory_slot.tscn" id="4_myy0f"]
[ext_resource type="Script" uid="uid://eefrlglt1xkb" path="res://Inventory/Inventory GUI/inventory_ui.gd" id="4_sjs17"]
[ext_resource type="AudioStream" uid="uid://um1mti2yr473" path="res://Music & SFX/SFX/hover_pm.wav" id="4_uscpe"]
[ext_resource type="Resource" uid="uid://dk3qgg14gni0g" path="res://Inventory/player_inventory.tres" id="5_u8tnp"]
[ext_resource type="Script" uid="uid://gc1qbd01tbv2" path="res://Inventory/gear_item_button.gd" id="7_1ymcx"]
[ext_resource type="Texture2D" uid="uid://cnee03e2g7w2a" path="res://Assets/SCROLLS.png" id="8_tekra"]
[ext_resource type="Script" uid="uid://fynya842ea40" path="res://Quests/quests_ui.gd" id="10_524vl"]
[ext_resource type="PackedScene" uid="uid://dgxf862pxumbf" path="res://Quests/quest_item.tscn" id="10_ix48p"]
[ext_resource type="PackedScene" uid="uid://btphlt66ki2gc" path="res://Scenes/stats.tscn" id="10_uscpe"]
[ext_resource type="PackedScene" uid="uid://credu1nntxmmh" path="res://Quests/quest_step_item.tscn" id="12_0fi7f"]
[ext_resource type="Texture2D" uid="uid://lmwan6nv0miw" path="res://Assets/shield_3.png" id="17_8flw2"]
[ext_resource type="Texture2D" uid="uid://dwvs2dnwucdg0" path="res://Assets/sword_6.png" id="18_c8xnj"]
[ext_resource type="Texture2D" uid="uid://b2osibq0e8rn5" path="res://Assets/magic_book.png" id="18_m5ant"]
[ext_resource type="Texture2D" uid="uid://dj8sub83a5mh1" path="res://Assets/ring_sprite.png" id="20_kg368"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_wqpeb"]
load_path = "res://.godot/imported/INV BOARDERS.png-c41a7967103960dad6da86b7fb648bb9.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_tekra"]
atlas = SubResource("CompressedTexture2D_wqpeb")
region = Rect2(193, 129, 62, 62)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8flw2"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_tekra")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_8flw2"]
atlas = ExtResource("8_tekra")
region = Rect2(147, 81, 11, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8xnj"]
atlas = ExtResource("8_tekra")
region = Rect2(98, 113, 12, 13)

[sub_resource type="AtlasTexture" id="AtlasTexture_m5ant"]
atlas = ExtResource("8_tekra")
region = Rect2(114, 114, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_stj27"]
atlas = ExtResource("3_u8tnp")
region = Rect2(0, 128, 64, 64)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_myy0f"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_stj27")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_vmyb1")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.13, 0.13, 0.13, 0.746)

[node name="PAUSED" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
offset_left = 160.0
offset_top = 60.0
offset_right = 404.0
offset_bottom = 185.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_stj27")
theme_override_font_sizes/font_size = 100
text = "PAUSED"

[node name="Click" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("3_uscpe")

[node name="Click2" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("3_bpi0q")

[node name="Hover" type="AudioStreamPlayer" parent="Control"]
stream = ExtResource("4_uscpe")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Control"]
max_polyphony = 5

[node name="TabContainer" type="TabContainer" parent="Control"]
self_modulate = Color(0, 0, 0, 0.956863)
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 203.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 25
tab_alignment = 1
current_tab = 0

[node name="Inventory" type="Control" parent="Control/TabContainer"]
layout_mode = 2
mouse_filter = 2
metadata/_tab_index = 0

[node name="AbilityContainer" type="PanelContainer" parent="Control/TabContainer/Inventory"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.151
anchor_top = 0.102
anchor_right = 0.218
anchor_bottom = 0.468
offset_left = -25.92
offset_top = 61.708
offset_right = -102.56
offset_bottom = -123.928
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
theme_override_styles/panel = SubResource("StyleBoxTexture_8flw2")

[node name="AbilityGridContainer" type="GridContainer" parent="Control/TabContainer/Inventory/AbilityContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="InventorySlot" type="Button" parent="Control/TabContainer/Inventory/AbilityContainer/AbilityGridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("7_1ymcx")
description = "A glob of blood that boomerangs, damaging all enemies in its path."

[node name="TextureRect" type="TextureRect" parent="Control/TabContainer/Inventory/AbilityContainer/AbilityGridContainer/InventorySlot"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_8flw2")
stretch_mode = 3

[node name="InventorySlot2" type="Button" parent="Control/TabContainer/Inventory/AbilityContainer/AbilityGridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("7_1ymcx")
description = "Conjures a fireball projectile."

[node name="TextureRect" type="TextureRect" parent="Control/TabContainer/Inventory/AbilityContainer/AbilityGridContainer/InventorySlot2"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_c8xnj")
stretch_mode = 3

[node name="InventorySlot3" type="Button" parent="Control/TabContainer/Inventory/AbilityContainer/AbilityGridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
script = ExtResource("7_1ymcx")
description = "Conjures a psychic force projectile."

[node name="TextureRect" type="TextureRect" parent="Control/TabContainer/Inventory/AbilityContainer/AbilityGridContainer/InventorySlot3"]
texture_filter = 1
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = SubResource("AtlasTexture_m5ant")
stretch_mode = 3

[node name="PanelContainer" type="PanelContainer" parent="Control/TabContainer/Inventory"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.5
anchor_right = 0.422
anchor_bottom = 0.5
offset_left = 126.36
offset_top = -329.0
offset_right = -167.24
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
theme_override_styles/panel = SubResource("StyleBoxTexture_myy0f")

[node name="GridContainer" type="GridContainer" parent="Control/TabContainer/Inventory/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("4_sjs17")
data = ExtResource("5_u8tnp")

[node name="InventorySlot" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot2" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot3" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot4" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot5" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot6" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot7" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot8" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot9" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot10" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot11" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot12" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot13" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot14" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot15" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot16" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot17" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot18" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot19" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="InventorySlot20" parent="Control/TabContainer/Inventory/PanelContainer/GridContainer" instance=ExtResource("4_myy0f")]
layout_mode = 2
mouse_filter = 0

[node name="Stats" parent="Control/TabContainer/Inventory" instance=ExtResource("10_uscpe")]
layout_mode = 0
offset_left = 1000.0
offset_top = 120.0
offset_right = 1533.0
offset_bottom = 214.0

[node name="PanelContainer2" type="PanelContainer" parent="Control/TabContainer/Inventory"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.167
anchor_top = 0.5
anchor_right = 0.422
anchor_bottom = 0.5
offset_left = 704.36
offset_top = -176.0
offset_right = 410.76
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
theme_override_styles/panel = SubResource("StyleBoxTexture_myy0f")

[node name="GridContainer" type="GridContainer" parent="Control/TabContainer/Inventory/PanelContainer2"]
layout_mode = 2
columns = 5

[node name="TextureRect" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("17_8flw2")
stretch_mode = 3

[node name="InventorySlot_Armor" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer" instance=ExtResource("4_myy0f")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0

[node name="ClearSlot4" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
stretch_mode = 3

[node name="TextureRect2" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("18_m5ant")
stretch_mode = 3

[node name="InventorySlot_Amulet" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer" instance=ExtResource("4_myy0f")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0

[node name="TextureRect3" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("18_c8xnj")
stretch_mode = 3

[node name="InventorySlot_Weapon" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer" instance=ExtResource("4_myy0f")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0

[node name="ClearSlot3" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
stretch_mode = 3

[node name="TextureRect4" type="TextureRect" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("20_kg368")
stretch_mode = 3

[node name="InventorySlot_Ring" parent="Control/TabContainer/Inventory/PanelContainer2/GridContainer" instance=ExtResource("4_myy0f")]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 0

[node name="ItemDescription" type="Label" parent="Control/TabContainer/Inventory"]
texture_filter = 1
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 447.0
offset_top = 89.0
offset_right = 1519.0
offset_bottom = 338.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Quests" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("10_524vl")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Control/TabContainer/Quests"]
layout_mode = 0
offset_left = 397.0
offset_top = 131.0
offset_right = 917.0
offset_bottom = 611.0
follow_focus = true
scroll_vertical_custom_step = 100.0
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Control/TabContainer/Quests/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="QuestItem" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_ix48p")]
layout_mode = 2
mouse_filter = 2

[node name="QuestItem2" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_ix48p")]
layout_mode = 2
mouse_filter = 2

[node name="QuestItem3" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_ix48p")]
layout_mode = 2
mouse_filter = 2

[node name="QuestItem4" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_ix48p")]
layout_mode = 2
mouse_filter = 2

[node name="QuestItem5" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_ix48p")]
layout_mode = 2
mouse_filter = 2

[node name="QuestItem6" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_ix48p")]
layout_mode = 2
mouse_filter = 2

[node name="QuestItem7" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_ix48p")]
layout_mode = 2
mouse_filter = 2

[node name="QuestItem8" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_ix48p")]
layout_mode = 2
mouse_filter = 2

[node name="QuestItem9" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_ix48p")]
layout_mode = 2
mouse_filter = 2

[node name="QuestItem10" parent="Control/TabContainer/Quests/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("10_ix48p")]
layout_mode = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/Quests"]
layout_mode = 0
offset_left = 1032.0
offset_top = 136.0
offset_right = 1742.0
offset_bottom = 446.0
theme_override_constants/separation = 20

[node name="TitleLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
custom_minimum_size = Vector2(710, 15)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 30
text = "Quest Title"
autowrap_mode = 3

[node name="DescriptionLabel" type="Label" parent="Control/TabContainer/Quests/VBoxContainer"]
modulate = Color(0.560955, 0.560955, 0.560955, 1)
custom_minimum_size = Vector2(710, 15)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 20
text = "Quest Description"
autowrap_mode = 3

[node name="SpacerControl" type="Control" parent="Control/TabContainer/Quests/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="QuestStepItem" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("12_0fi7f")]
layout_mode = 2

[node name="QuestStepItem2" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("12_0fi7f")]
layout_mode = 2

[node name="QuestStepItem3" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("12_0fi7f")]
layout_mode = 2

[node name="QuestStepItem4" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("12_0fi7f")]
layout_mode = 2

[node name="QuestStepItem5" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("12_0fi7f")]
layout_mode = 2

[node name="QuestStepItem6" parent="Control/TabContainer/Quests/VBoxContainer" instance=ExtResource("12_0fi7f")]
layout_mode = 2

[node name="System" type="Control" parent="Control/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TabContainer/System"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -205.0
offset_right = 124.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Save" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 30
text = "Save"

[node name="Load" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 30
text = "Load"

[node name="Main Menu" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[node name="Quit" type="Button" parent="Control/TabContainer/System/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_1och7")
theme_override_font_sizes/font_size = 30
text = "Quit"

[connection signal="tab_clicked" from="Control/TabContainer" to="." method="_on_tab_container_tab_clicked"]
[connection signal="mouse_entered" from="Control/TabContainer/System/VBoxContainer/Save" to="." method="_on_save_mouse_entered"]
[connection signal="pressed" from="Control/TabContainer/System/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="mouse_entered" from="Control/TabContainer/System/VBoxContainer/Load" to="." method="_on_load_mouse_entered"]
[connection signal="pressed" from="Control/TabContainer/System/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="mouse_entered" from="Control/TabContainer/System/VBoxContainer/Main Menu" to="." method="_on_main_menu_mouse_entered"]
[connection signal="pressed" from="Control/TabContainer/System/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="mouse_entered" from="Control/TabContainer/System/VBoxContainer/Quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="Control/TabContainer/System/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
